forgot to commit last few times!

--- a/draftNotebook.ipynb
+++ b/draftNotebook.ipynb
@@ -743,6 +743,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map of Points"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
